# forkliftci

./: .gitignore  BUILD_AND_INSTALL_FORKLIFT_ON_KIND.md  BUILD_AND_INSTALL_FORKLIFT_WITH_BAZEL_ON_KIND.md  INSTALL_FORKLIFT_ON_KIND.md  README.md  action.yml  add_pv.yml  build_and_setup_everything.sh  build_and_setup_everything_bazel.sh  build_and_setup_everything_bazel_manually.sh  build_and_setup_everything_bazel_manually_remote.sh  build_forklift.sh  build_forklift_bazel.sh  build_tests_bazel.sh  cleanup_everything_bazel_manually.sh  deploy_local_forklift.sh  deploy_local_forklift_bazel.sh  forklift-k8s.yaml  get_forklift.sh  install_kind.sh  k8s-deploy-forklift.sh  k8s-deploy-kubevirt.sh  kind-config.yaml  kind_with_registry.sh  patch_file  patch_for_local_registry.sh  patch_for_local_registry_bazel.sh  setup_everything.sh  setup_remote_docker_kind.sh  wait_for_forklift_startup.sh
.github/workflows/: build_push_tests.yml  deploy-sno-okd.yml  run_forklift_build_on_kind.yml  run_forklift_release_on_kind.yml
ci/: README.md
ci/build-and-setup/: action.yml
ci/create-self-runner/: action.yml
ci/deploy-okd/: action.yml
ci/prepare-ansible-secrets/: action.yml
ci/run-suite/: action.yml
ci/save-artifacts/: action.yml
cluster/: common.sh  deploy_local_forklift_bazel.sh  get_forklift_bazel.sh  k8s-deploy-cert-manager.sh  k8s-deploy-kubevirt.sh  setup_everything.sh
cluster/gh-action-runner/: README.md  gh-action-runner-register-gh-action.yml  gh-action-runner-template-create.yml  gh-action-runner-vm-create.yml  okd-on-ovirt-config.yaml  utils.sh
cluster/kind/: cleanup_everything_bazel_manually.sh  grant_permissions.sh  install_kind.sh  kind_sshtunnel.sh  kind_with_registry.sh
cluster/manifests/: kind-config.yaml
cluster/okd-on-ovirt/: README.md  deploy_okd.sh  okd-on-ovirt-config.yaml  okd-on-ovirt-deploy.yml  okd-on-ovirt-test-stopped.yml  okd-on-ovirt-test.yml  utils.sh
cluster/okd-on-ovirt/roles/okd-on-ovirt/: README.md
cluster/okd-on-ovirt/roles/okd-on-ovirt/defaults/: main.yml
cluster/okd-on-ovirt/roles/okd-on-ovirt/tasks/: create_assisted_cluster.yaml  install_cluster.yaml  login_to_ovirt.yaml  main.yml  remove_cluster.yaml
cluster/okd-on-ovirt/roles/okd-on-ovirt/templates/: machine-config.json.j2  new_cluster_body.json.j2  new_infra_env.json.j2
cluster/providers/: README.md  install-provider.sh
cluster/providers/openstack/: create_test_vms.sh  install_nfs.sh  packstack_deployment.yml  setup.sh  utils.sh
cluster/providers/openstack/manifests/: osp-volume-populator-crd.yaml  osp-volume-populator-deployment.yaml  packstack_deployment.yml
cluster/providers/ova/: setup.sh
cluster/providers/ovirt/: e2e_env_vars.sh  fakeovirt_deployment.yml  setup.sh
cluster/providers/utils/: deploy_csi_driver_nfs.sh
cluster/providers/vmware/: setup.sh  vcsim_certificate.yml  vcsim_deployment.yml  vcsim_deployment.yml.debug
openstack/: create_test_vms.sh  deploy_csi_driver_nfs.sh  install_nfs.sh  packstack_deployment.yml  run_packstack_docker.sh  setup.sh  utils.sh
ovirt/: Dockerfile  e2e_env_vars.sh  fakeovirt_deployment.yml  forklift_migration.yml  forklift_provider.yml  imageio_deployment.yml  ovirt_imageio_deployment.yml  patch.yml  setup.sh
ovirt-imageio/: Dockerfile  ca.pem  imageio_deployment.yml  myticket.json
ovirt/stubs/: content  content.json  content.xml
ovirt/stubs/disks/: content  content.json  content.xml
ovirt/stubs/disks/b5a7f7f6-377b-467b-850f-a0dcd43ac5d7/: content.json  content.xml
ovirt/stubs/hosts/: content
ovirt/stubs/imagetransfers/: stub.json
ovirt/stubs/networks/: content
ovirt/stubs/storagedomains/: content
ovirt/stubs/vms/: content
stub-images/: BUILD.bazel
stub-images/ova-nfs/: BUILD.bazel
stub-images/vddk-test-vmdk/: BUILD.bazel  vddk-test-plugin.c
stub-images/virt-v2v-stub/: BUILD.bazel
vmware/: manual_deploy_migration_vsphere.yml  setup.sh  vsphere_provider.yml
