load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_pull",
    "container_push",
)

container_push(
    name = "push-forklift-virt-v2v-stub",
    format = "Docker",
    image = "//stub-images/virt-v2v-stub:forklift-virt-v2v-stub",
    registry = "$${REGISTRY:-quay.io}",
    repository = "$${REGISTRY_ORG:-}$${REGISTRY_ORG:+/}forklift-virt-v2v-stub",
    tag = "$${REGISTRY_TAG:-devel}",
)

container_push(
    name = "push-vddk-test-vmdk",
    format = "Docker",
    image = "//stub-images/vddk-test-vmdk:vddk-test-image",
    registry = "$${REGISTRY:-quay.io}",
    repository = "$${REGISTRY_ORG:-}$${REGISTRY_ORG:+/}vddk-test-vmdk",
    tag = "$${REGISTRY_TAG:-devel}",
)
