load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "forklift-virt-v2v-stub",
    base = "//:forklift-virt-v2v",
    directory = "/usr/local/bin/",
    empty_dirs = ["/disks"],
    entrypoint = ["/usr/local/bin/entrypoint"],
    env = {"LIBGUESTFS_BACKEND": "direct"},
    files = ["bin/entrypoint"],
    user = "1001",
    visibility = ["//visibility:public"],
)
