load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")

container_run_and_commit_layer(
    name = "qemu-img",
    commands = [
        "dnf -y install qemu-img file",
    ],
    image = "@centos-stream-9//image",
)

container_image(
    name = "forklift-virt-v2v-stub",
    base = "@centos-stream-9//image",
    directory = "/usr/local/bin/",
    empty_dirs = ["/disks"],
    entrypoint = ["/usr/local/bin/entrypoint"],
    env = {"LIBGUESTFS_BACKEND": "direct"},
    files = ["bin/entrypoint"],
    layers = [":qemu-img"],
    user = "1001",
    visibility = ["//visibility:public"],
)
